--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/sliders.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my second repo</title>
 </head>
 <body>
+    <h3>sliders of images</h3>
+     <img src="asus.jpg" alt="">
     
 </body>
 </html>
