added some more changes to see the difference

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h3>sliders of images</h3>
      <img src="asus.jpg" alt="">
+     <img src="red-skull-black-4k-2z-3840x2160.jpg" alt="">
     
 </body>
 </html>
